--- a/Src/DataSample.Client/App.xaml
+++ b/Src/DataSample.Client/App.xaml
@@ -2,8 +2,6 @@
     x:Class="DataSample.Client.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:DataSample.Client"
-    Startup="Application_Startup"
-    StartupUri="MainWindow.xaml">
+    xmlns:local="clr-namespace:DataSample.Client">
     <Application.Resources />
 </Application>
