--- a/Src/DataSample.Benchmark/MainWindow.xaml
+++ b/Src/DataSample.Benchmark/MainWindow.xaml
@@ -5,24 +5,65 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:DataSample.Benchmark"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
+    Title="SQL Saturday - 829"
     Width="800"
     Height="450"
     mc:Ignorable="d">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="9*" />
-            <RowDefinition Height="1*" />
-        </Grid.RowDefinitions>
-        <Label
-            HorizontalAlignment="Center"
-            VerticalAlignment="Center"
-            Content="Hello .NET Core!"
-            FontSize="40" />
-        <Button
-            Grid.Row="1"
-            Click="ButtonExit_Click"
-            Content="Exit"
-            FontSize="20" />
-    </Grid>
+    <telerik:RadNavigationView x:Name="navigationView" PaneHeader="SQL Saturday - 829">
+        <telerik:RadNavigationView.Items>
+            <telerik:RadNavigationViewItem Content="Bookmarks">
+                <telerik:RadNavigationViewItem.Icon>
+                    <telerik:RadGlyph FontSize="16" Glyph="&#xe303;" />
+                </telerik:RadNavigationViewItem.Icon>
+            </telerik:RadNavigationViewItem>
+            <telerik:RadNavigationViewItem Content="Favorites">
+                <telerik:RadNavigationViewItem.Icon>
+                    <telerik:RadGlyph FontSize="16" Glyph="&#xe301;" />
+                </telerik:RadNavigationViewItem.Icon>
+            </telerik:RadNavigationViewItem>
+            <telerik:RadNavigationViewItem Content="Files">
+                <telerik:RadNavigationViewItem.Icon>
+                    <telerik:RadGlyph FontSize="16" Glyph="&#xe901;" />
+                </telerik:RadNavigationViewItem.Icon>
+            </telerik:RadNavigationViewItem>
+        </telerik:RadNavigationView.Items>
+        <telerik:RadNavigationView.Content>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="100" />
+                </Grid.RowDefinitions>
+                <Label
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Content="Hello .NET Core!"
+                    FontSize="40" />
+
+                <Grid Grid.Row="1" Margin="15">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Button
+                        Click="ButtonExit_Click"
+                        Content="Exit"
+                        FontSize="20" />
+
+                </Grid>
+            </Grid>
+        </telerik:RadNavigationView.Content>
+        <telerik:RadNavigationView.PaneFooter>
+            <telerik:RadNavigationViewItem Content="Exit">
+                <telerik:RadNavigationViewItem.Icon>
+                    <telerik:RadGlyph FontSize="16" Glyph="&#xe901;" />
+                </telerik:RadNavigationViewItem.Icon>
+            </telerik:RadNavigationViewItem>
+        </telerik:RadNavigationView.PaneFooter>
+    </telerik:RadNavigationView>
+
 </Window>
