--- a/Src/DataSample.Benchmark/App.xaml
+++ b/Src/DataSample.Benchmark/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="DataSample.Benchmark.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DataSample.Benchmark"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="DataSample.Benchmark.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:DataSample.Benchmark"
+    StartupUri="Views/MainWindow.xaml">
+    <Application.Resources />
 </Application>
