--- a/Src/DataSample.Benchmark/Views/MainWindow.xaml
+++ b/Src/DataSample.Benchmark/Views/MainWindow.xaml
@@ -1,5 +1,5 @@
 ﻿<Window
-    x:Class="DataSample.Benchmark.MainWindow"
+    x:Class="DataSample.Benchmark.Views.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,6 +10,7 @@
     Width="800"
     Height="450"
     mc:Ignorable="d">
+
     <telerik:RadNavigationView x:Name="navigationView" PaneHeader="SQL Saturday - 829">
         <telerik:RadNavigationView.Items>
             <telerik:RadNavigationViewItem Content="Bookmarks">
